--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
     .footer_icon
         i.fab.fa-youtube
-    span.footer__text #{new Date().getFullYear()} WeTube &copy; 
+    span.footer__text #{new Date().getFullYear()} #{siteName} &copy; 
