--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -3,3 +3,9 @@
 @import "main.scss";
 
 @import "partials/header.scss";
+@import "partials/footer.scss";
+@import "partials/form.scss";
+@import "partials/socialLogin.scss";
+
+@import "pages/home.scss";
+@import "pages/videoDetail.scss";
