--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -6,8 +6,9 @@ block content
             video(src=`/${video.fileUrl}`)
 
         .video__info
-            a(href=routes.editVideo(video.id))
-                button Edit Video
+            if video.creator.id === loggedUser.id
+                a(href=routes.editVideo(video.id))
+                    button Edit Video
             
             h5.video__title=video.title
             p.video__description=video.description
@@ -16,6 +17,9 @@ block content
                 span.video__views 1 view
             else
                 span.video__views #{video.views} views
+            .video__author
+                |Uploaded by 
+                a(href=routes.userDetail(video.creator.id))=video.creator.name
 
         .video__comments
             if video.comments.length === 1
