--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -36,7 +36,9 @@ block content
                 input(type="text",placeholder="Add a comment")
             ul.video__comments-list#jsCommentList
                 each comment in video.comments.reverse()
-                    li
+                    li(id=`${comment.id}`)
                         span=comment.text
-
-
+                        if loggedUser && comment.creator == loggedUser.id   
+                            a
+                                span ❌
+            
